<resources>
    <string name="app_name">MyShoppingApplication</string>
    <string name="intro_first_line">Najbolja kupovina</string>
    <string name="intro_second_line">Sve je u vašim rukama!</string>
    <string name="btn_login">ULOGOVANJE</string>
    <string name="btn_sign_up">REGISTRACIJA</string>
    <string name="enter_password">Lozinka</string>
    <string name="enter_email">E-mail</string>
    <string name="enter_fullname">Ime i prezime</string>
    <string name="reenter_password">Potvrdi lozinku</string>
    <string name="user_login">ULOGUJ SE</string>
    <string name="user_registration">REGISTRUJ SE</string>
    <string name="link_user_signup">Nemate nalog? Kreirajte novi nalog!</string>
    <string name="popular_products">Popular Products</string>
    <string name="browse_category">Browse Category</string>
</resources>