<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="350dp"
            android:layout_height="293dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/sports_shop_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80sp"
            android:text="@string/btn_login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/UserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:minHeight="58dp"
            android:textColor="@color/colorRed" />


        <EditText
            android:id="@+id/UserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="58dp"
            android:textColor="@color/colorRed" />

        <Button
            android:id="@+id/buttonlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/user_login"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/linkUserSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/link_user_signup"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp" />

    </LinearLayout>
</LinearLayout>