<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="711dp"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="391dp"
            android:layout_height="276dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/sports_shop_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/btn_sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorDarkRed"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/UserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/colorRed" />

        <EditText
            android:id="@+id/UserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorRed" />

        <EditText
            android:id="@+id/UserPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reenter_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/colorRed" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/user_registration" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="Imate već postojeći nalog? Ulogujte se!"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:textSize="18sp" />


    </LinearLayout>
</LinearLayout>